# Specter-OS

./: .firebaserc  .gitignore  BUILD_COMPLETE_GUIDE.md  CONTRIBUTING.md  Cargo.toml  ENABLE_GITHUB_PAGES.md  GEMINI.md  README.md  buf.work.yaml  gem.txt  mis.txy
.firebase/: hosting.d2Vic2l0ZQ.cache
.gemini/: settings.json
.github/workflows/: deploy-pages.yml
GHOSTKERNEL_PROMPTS/: CODEX_PROMPT.md  GEMINI_HELLO.md  GEMINI_OS_RUNBOOK.md  GEMINI_OS_UI_AND_CORE_PROMPT.md  GHOSTKERNEL_OS_BIBLE.md  KIMI_PROMPT.md  MASTER_PROMPT.md  OPUS_PROMPT.md  README.md
ci/containers/: README.md
ci/scripts/: build-debian-packages.sh  build-fedora-packages.sh  check-reproducibility.sh  generate-sbom.sh  run-vm-smoke.sh  validate-config-schema.sh  verify-signatures.sh
ci/workflows/: ci-gates.yml
distro/: Dockerfile  README-DEBIAN.md  README.md  composer.toml
distro/live-build/: build.sh
distro/scripts/: build-debian-iso.sh  build-debian-live.sh  build-fedora.sh  build-real-iso.sh  build-termux-chroot.sh  bump-version.sh  setup-debian-chroot.sh
docs/: API_REFERENCE.md  HARDWARE_MATRIX.md  MILESTONE2_IMPLEMENTATION_NOTES.md  MILESTONE3_IMPLEMENTATION_NOTES.md  MILESTONE4_IMPLEMENTATION_NOTES.md  PRD_GHOSTKERNEL_V1.md  SPRINT1_IMPLEMENTATION_PLAN.md
docs/architecture/: README.md
docs/contracts/: README.md
docs/runbooks/: README.md
interfaces/schema/: ghostkernel-config-v1.json
packaging/image-build/: build-iso-simple.sh  build-iso.sh
packaging/installer/: install.sh
packaging/manifest/: packages.toml
packaging/sbom/: README.md  sbom.json
packaging/signing/: README.md
packaging/vnc-web/: Cargo.toml
tests/: MILESTONE4_COVERAGE.md
tests/fixtures/: README.md
tests/harness/: Cargo.toml
tests/harness/src/: lib.rs
tests/harness/tests/: milestone2_flows.rs  milestone4_e2e_scenarios.rs  milestone4_integration_tests.rs  milestone4_runtime_smoke.rs
tests/integration/: README.md  guardian_integration_test.rs
website/: faq.html  gallery.html  index.html  installation.html
xtask/: Cargo.toml
(+141 files in other folders)
